inserindo pequenas melhorias
