# src/infrastructure/http/routes/workflow.routes.ts
@@ -1,6 +1,8 @@
 import { Router } from "express";
 import { makeWorkflowController } from "@/main/factories/makeWorkflowController";
 import { ensureAuthenticated } from "@/presentation/middlewares/ensureAuthenticated";
+import { AccessRole } from "@/domain/entities/User";
+import { ensureRole } from "@/presentation/middlewares/ensureRole";
 
 const workflowRoutes = Router();
 const controller = makeWorkflowController();
@@ -9,6 +11,7 @@ workflowRoutes.use(ensureAuthenticated);
 
 workflowRoutes.post("/", (req, res) => controller.handleCreate(req, res));
 workflowRoutes.get("/", (req, res) => controller.handleListMyWorkflows(req, res));
+workflowRoutes.get("/management", ensureRole([AccessRole.ADMIN, AccessRole.MASTER]), (req, res) => controller.handleListManagement(req, res));
 workflowRoutes.get("/:id", (req, res) => controller.handleGetDetail(req, res));
 
 export { workflowRoutes };
